# arena

./: .ccls  .gitignore  CMakeLists.txt  README.md  imgui.ini  run.sh
assets/: fan_tree.mtl  skybox.vert  terrain.ter
assets/ui/: debugview.xml
scripts/: light_shader.lua  lightsVertex.lua  material.lua  screen_shader.lua  skybox_shader.lua  terrain_material.lua  terrain_shader.lua  text_shader.lua  ui_shader.lua
shaders/: basic.vs  light_shader.frag  light_shader.fs  reflection_shader.frag  screen.fs  terrain.frag  terrain.vert  text.frag  text.vert  texture_basic.fs  texture_basic.vs  ui.vert
src/: global.cpp  global.h  logging.h  main.cpp
src/assets/: CMakeLists.txt  cache.cpp  cache.h  file_reader.cpp  file_reader.h  loaders.h  obj_file.cpp  obj_file.h  obj_loader.cpp  obj_loader.h  resource.h  shader_loader.cpp  terrain_loader.cpp
src/core/: CMakeLists.txt  allocator.h  application.cpp  application.h  command.h  double_linked_list.h  engine.cpp  engine.h  event.h  event_dispatcher.h  hash.cpp  hash.h  linear_allocator.cpp  linear_allocator.h  list_allocator.cpp  list_allocator.h  path.cpp  path.h  program_time.cpp  program_time.h  singly_linked_list.h  stack_allocator.cpp  stack_allocator.h  telemetrics.h  window.cpp  window.h
src/editor/: CMakeLists.txt  editor.cpp  editor.h  scene_view.cpp  scene_view.h  world_editor.cpp  world_editor.h
src/entity/: CMakeLists.txt  camera.cpp  camera.h  collision_system.cpp  collision_system.h  component.cpp  component.h  component_array.cpp  component_array.h  component_manager.h  component_registry.h  ec_collision.cpp  ec_collision.h  ec_collision_box.cpp  ec_collision_box.h  ec_collision_object.cpp  ec_collision_object.h  ec_command.cpp  ec_command.h  ec_component_inits.cpp  ec_control.h  ec_factory.cpp  ec_factory.h  ec_first_person_camera.cpp  ec_first_person_camera.h  ec_physics.cpp  ec_physics.h  ec_player.cpp  ec_player.h  ec_rigid_body.cpp  ec_rigid_body.h  ec_static_mesh.cpp  ec_static_mesh.h  ec_static_mesh_renderer.cpp  ec_static_mesh_renderer.h  ec_static_model.h  ec_transform.cpp  ec_transform.h  ecs.h  entity.cpp  (+19 more)
src/game/: CMakeLists.txt  game_state.cpp  game_state.h  map.cpp  map.h  render_world.cpp  render_world.h  scene.cpp  scene.h  world.h
src/graphics/: CMakeLists.txt  color.cpp  color.h  events.h  font.cpp  font.h  geometry.cpp  geometry.h  gpu_buffer.cpp  gpu_buffer.h  graphic_options.cpp  graphic_options.h  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  rect.cpp  rect.h  render_target.cpp  render_target.h  renderer.cpp  renderer.h  shader.cpp  shader.h  skybox.cpp  skybox.h  terrain.cpp  terrain.h  texture.cpp  texture.h  ui_renderer.cpp  ui_renderer.h
src/input/: CMakeLists.txt  events.h  input.cpp  input.h  input_manager.cpp  input_manager.h  key_bindings.h  keybindings.cpp
src/lua/: CMakeLists.txt  helpers.cpp  helpers.h  lua_script.cpp  lua_script.h
src/math/: CMakeLists.txt  box.h  helpers.h  point.h  quaternion.h
src/physics/: CMakeLists.txt  algorithm.cpp  algorithm.h  collider.h  collision.cpp  collision.h  octree.cpp  octree.h  octree_node.h  parametrics.cpp  parametrics.h  physics_object.cpp  physics_object.h  physics_system.cpp  physics_system.h  simplex.h  solver.cpp  solver.h
src/platform/: CMakeLists.txt  platform.h
src/ui/: CMakeLists.txt  component.cpp  component.h  component_builder.cpp  component_builder.h  element.cpp  element.h  element_builder.cpp  element_builder.h  events.h  frame.cpp  frame.h  object.cpp  object.h  ui.cpp  ui.h  ui_command.cpp  ui_command.h  ui_node.cpp  ui_node.h  view.cpp  view.h
src/utils/: converts.h  types.h
